# base4

./: .gitignore  README.md  b.tgz  pyproject.toml
base4/: __init__.py  debug.py  ifbreakpoint.py  project_specifics.py
base4/api/: crud.py  crud_v2.py
base4/constants/service/: ttl.py
base4/constants/users/: roles.py
base4/ipc/: __init__.py  attachments.py  bp.py  flow.py  ipc.py  kanban.py  tenants.py  tickets.py  timesheets.py  workflows.py
base4/models/: base.py  utils.py
base4/obsolete_ombis/: activities.py  fetch.py  json_repo.py  users.py
base4/ombis/: fetch.py  json_repo.py  ombis_util.py
base4/schemas/: __init__.py  base.py  conf.py  crud.py  login.py  timesheets.py  universal_table.py
base4/scripts/: bmanager.py  gen_model.py  gen_schemas.py  gen_tables.py  generator.py  testall  testall.py  yaml_compiler.py
base4/scripts/newproject/: build.sh  init-project.sh  new-project-pyenv.sh  new-project.sh
base4/scripts/pip/: down.py  up.py
base4/scripts/servicecrafter/: README.MD  craft.py
base4/scripts/servicecrafter/utils/: __init__.py  crafter.py  crafter_api.py  crafter_services.py  crafter_yamls.py
base4/scripts/servicecrafter/utils/templates/: __init__.py  api.py  services.py  tests.py  yamls.py
base4/scripts/servicecrafter/utils/templates/jinja/: service_item.j2
base4/service/: base.py  base_service_v2.py  exceptions.py
base4/utilities/: .env  ac_middlewares.py  app_run_modes.py  base_dotenv.py  cache.py  check_environment.py  common.py  config.py  contants.py  files.py  images.py  oauth.py  observer.py  totp.py  ws.py
base4/utilities/access_control/: helpers.py  middlewares.py
base4/utilities/db/: async_redis.py  base.py  redis.py  wait4db.py
base4/utilities/http/: methods.py
base4/utilities/logging/: setup.py
base4/utilities/parsers/: str2q.py
base4/utilities/security/: jwt.py
base4/utilities/service/: base.py  base_pre_and_post.py  startup.py
base4/utilities/shared/: impresa_http_utils.py  ombis_lookup.py
base4/workers/: sample.py
base4/ws/: service.py
docker/: Dockerfile  nginx-generated.conf  start.sh
