[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base4"
version = "0.1.0"
description = "Internal backend devl library"
authors = [
    { name = "Digital CUBE", email = "info@digitalcube.rs" }
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
	# GENERATED ON: 2024-12-12 13:16:53
	'redis==5.2.0',
	'GitPython==3.1.43',
	'aerich==0.7.2',
	'lark-parser==0.12.0',
	'python-socketio==5.11.4',
	'pytest-asyncio==0.24.0',
	'httpx==0.27.2',
	'fastapi==0.115.5',
	'PyYAML==6.0.2',
	'pytest==8.3.3',
	'pytest-xdist==3.6.1',
	'Jinja2==3.1.4',
	'python-slugify==8.0.4',
	'setuptools==75.6.0',
	'uvicorn==0.32.1',
	'ujson==5.10.0',
	'cryptography==43.0.3',
	'requests==2.32.3', #2.26.0
	'isort==5.13.2',
	'aiofiles==24.1.0',
	'python-multipart==0.0.17',
	'bcrypt==4.2.1',
	'fakeredis==2.26.1',
	'python-dotenv==1.0.1',
	'PyJWT==2.10.0',
	'asyncpg==0.30.0',
	'Unidecode==1.3.8',
	'asyncclick==8.1.7.2',
	'pytest-cov==6.0.0',
	'black==24.10.0',
	'pydash==8.0.4',
	'tortoise-orm==0.22.0',
]

[project.urls]
repository = "https://github.com/digital-cube/base4"

[tool.setuptools.package-data]
"base4" = ["*.json"]

[project.scripts]
    bmanager = "base4.scripts.bmanager:do"
    testall = "base4.scripts.testall:do"

[tool.setuptools]
packages = [
    "base4",
    'base4.scripts',
    'base4.scripts.pip',
    "base4.schemas",
    "base4.models",
    "base4.service",
    "base4.api",
    'base4.utilities',
    'base4.constants.users',
    'base4.constants.service',
    'base4.utilities.logging',
    'base4.utilities.db',
    'base4.utilities.http',
    'base4.utilities.parsers',
    'base4.utilities.security',
    'base4.utilities.service',
    'base4.ws',
]
