[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base4"
version = "0.1.0"
description = "Internal backend devl library"
authors = [
    { name = "Digital CUBE", email = "info@digitalcube.rs" }
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
	# GENERATED ON: 2024-12-29 22:35:56
	'Unidecode==1.3.8',
	'pytest-asyncio==0.25.0', #0.24.0
	'fastapi==0.115.6', #0.115.5
	'pytest-cov==6.0.0',
	'ujson==5.10.0',
	'python-socketio==5.12.1', #5.11.4
	'pytest==8.3.4', #8.3.3
	'cryptography==44.0.0', #43.0.3
	'python-slugify==8.0.4',
	'PyJWT==2.10.1', #2.10.0
	'PyYAML==6.0.2',
	'uvicorn==0.34.0', #0.32.1
	'aerich==0.8.1', #0.7.2
	'bcrypt==4.2.1',
	'redis==5.2.1', #5.2.0
	'black==24.10.0',
	'python-multipart==0.0.20', #0.0.17
	'requests==2.32.3',
	'GitPython==3.1.43',
	'aiofiles==24.1.0',
	'tortoise-orm==0.23.0', #0.22.0
	'lark-parser==0.12.0',
	'pydash==8.0.4',
	'fakeredis==2.26.2', #2.26.1
	'pytest-xdist==3.6.1',
	'python-dotenv==1.0.1',
	'Jinja2==3.1.5', #3.1.4
	'httpx==0.28.1', #0.27.2
	'asyncclick==8.1.7.2',
	'asyncpg==0.30.0',
	'isort==5.13.2',
	'setuptools==75.6.0',
	'Authlib==1.4.0',
	'pyotp==2.9.0',
	'itsdangerous==2.2.0',
]

[project.urls]
repository = "https://github.com/digital-cube/base4"

[tool.setuptools.package-data]
"base4" = ["*.json"]

[project.scripts]
    bmanager = "base4.scripts.bmanager:do"
    testall = "base4.scripts.testall:do"

[tool.setuptools]
packages = [
    "base4",
    'base4.scripts',
    'base4.scripts.pip',
    "base4.schemas",
    "base4.models",
    "base4.service",
    "base4.api",
    'base4.utilities',
    'base4.constants.users',
    'base4.constants.service',
    'base4.utilities.logging',
    'base4.utilities.db',
    'base4.utilities.http',
    'base4.utilities.parsers',
    'base4.utilities.security',
    'base4.utilities.service',
    'base4.ws',
]
