[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base4"
version = "0.1.0"
description = "Internal backend devl library"
authors = [
    { name = "Digital CUBE", email = "info@digitalcube.rs" }
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
	# GENERATED ON: 2025-01-06 22:57:37
	'aiofiles==24.1.0',
	'PyYAML==6.0.2',
	'fakeredis==2.26.2',
	'PyJWT==2.10.1',
	'black==24.10.0',
	'asyncpg==0.30.0',
	'Authlib==1.4.0',
	'pytest-cov==6.0.0',
	'pytest-xdist==3.6.1',
	'GitPython==3.1.44', #3.1.43
	'httpx==0.28.1',
	'itsdangerous==2.2.0',
	'uvicorn==0.34.0',
	'pydash==8.0.4',
	'pyotp==2.9.0',
	'python-socketio==5.12.1',
	'cryptography==44.0.0',
	'python-slugify==8.0.4',
	'isort==5.13.2',
	'fastapi==0.115.6',
	'Jinja2==3.1.5',
	'Unidecode==1.3.8',
	'bcrypt==4.2.1',
	'pytest==8.3.4',
	'lark-parser==0.12.0',
	'setuptools==75.7.0', #75.6.0
	'python-multipart==0.0.20',
	'aerich==0.8.1',
	'ujson==5.10.0',
	'asyncclick==8.1.8.0', #8.1.7.2
	'python-dotenv==1.0.1',
	'redis==5.2.1',
	'tortoise-orm==0.23.0',
	'requests==2.32.3',
	'pytest-asyncio==0.25.1', #0.25.0
]

[project.urls]
repository = "https://github.com/digital-cube/base4"

[tool.setuptools.package-data]
"base4" = ["*.json"]

[project.scripts]
    bmanager = "base4.scripts.bmanager:do"
    testall = "base4.scripts.testall:do"

[tool.setuptools]
packages = [
    "base4",
    'base4.scripts',
    'base4.scripts.pip',
    "base4.schemas",
    "base4.models",
    "base4.service",
    "base4.api",
    'base4.utilities',
    'base4.constants.users',
    'base4.constants.service',
    'base4.utilities.logging',
    'base4.utilities.db',
    'base4.utilities.http',
    'base4.utilities.parsers',
    'base4.utilities.security',
    'base4.utilities.service',
    'base4.ws',
]
